--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
-    <title>Lorem Ipsum</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="App/Global/Styles/mdl/material.css" />
+    <script type="text/javascript" src="App/Global/js/mdl/material.js"></script>
   </head>
   <body>
     <div id="root">
